orchestrator/http-protocol/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpt2
  namespace: test
spec:
  externalName: knative-local-gateway.istio-system.svc.cluster.local
  ports:
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 80
  - name: http
    port: 8082
    protocol: TCP
    targetPort: 8082
  sessionAffinity: None
  type: ExternalName
